kind-cluster/frontend-image-patch.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  template:
    spec:
      containers:
        - name: frontend
          image: opspilot-frontend:latest
