kind-cluster/ingress-kind.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: opspilot
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /api/v1
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 5000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
